Add bow example bow mesh to scene

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -157,6 +157,7 @@
 
           return mesh;
         })();
+        scene.add(bowMesh);
 
         const arrowGeometry = (() => {
           const coreGeometry = new THREE.BoxBufferGeometry(0.01, 0.01, 0.75);
