Bugfix bow example bow mesh image

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -177,7 +177,7 @@
           _requestImage('icons/Arrow.png'),
         ]);
 
-        const bowMesh = sprite3d.makeSpriteMesh(arrowImg)
+        const bowMesh = sprite3d.makeSpriteMesh(bowImg)
         bowMesh.geometry
           .applyMatrix(new THREE.Matrix4().makeRotationFromQuaternion(
             new THREE.Quaternion().setFromAxisAngle(
