--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -12,7 +12,7 @@
   <!-- <script src="BufferGeometryUtils.js"></script> -->
   <script>
 (async () => {
-    let container, scene, camera, display;
+    let container, scene, camera, display, bowMesh;
     // let mesher = null;
 
     const zeroVector = new THREE.Vector3();
@@ -188,7 +188,7 @@
           _requestImage('icons/Arrow.png'),
         ]);
 
-        const bowMesh = sprite3d.makeSpriteMesh(bowImg);
+        bowMesh = sprite3d.makeSpriteMesh(bowImg);
         bowMesh.geometry
           .applyMatrix(new THREE.Matrix4().makeRotationFromQuaternion(
             new THREE.Quaternion().setFromAxisAngle(
@@ -432,7 +432,7 @@
               localMatrix
                 .fromArray(pose.targetRay.transformMatrix)
                 .decompose(localVector, localQuaternion, localVector2);
-               if (localVector.distanceTo(bowMesh.position) < 0.1) {
+               if (localVector.distanceTo(bowMesh.position) < 0.3) {
                  grabbedIndex = i;
                }
             } else if (lastBumper && !bumper) {
@@ -446,7 +446,7 @@
         };
         const _updateGrab = () => {
           if (grabbedIndex !== -1) {
-            const inputSource = inputSources[i];
+            const inputSource = inputSources[grabbedIndex];
             const pose = frame.getInputPose(inputSource);
             localMatrix
               .fromArray(pose.targetRay.transformMatrix)
