--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -2111,6 +2111,11 @@ if (navigator.xr && !query.fake) {
         renderer.vr.setDevice(display);
         renderer.vr.setAnimationLoop(animate);
 
+        if (window.browser && window.browser.magicleap) {
+          window.browser.magicleap.RequestDepthPopulation(true);
+          renderer.autoClearDepth = false;
+        }
+
         _openUrl('exobot.html');
         _updateRigLists();
 
