Avatar example remove hit test failure handling

--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -403,11 +403,7 @@
                       }
                     })
                     .catch(err => {
-                      if (animation === localAnimation) {
-                        console.warn(err);
-
-                        animation.hitTesting = false;
-                      }
+                      console.warn(err.stack);
                     });
                   animation.hitTesting = true;
                 }
